Fix email templates

--- a/backend/mail/templates/createEmail.tmpl
+++ b/backend/mail/templates/createEmail.tmpl
@@ -1,6 +1,6 @@
 {{define "createEmailTextMail"}}
-{{t "email_create_text" .}}
+<p>{{t "email_create_text" .}}</p>
 
-{{t "security_disclaimer_text" .}}
+<p>{{t "security_disclaimer_text" .}}</p>
 
 {{end}}
