--- a/backend/mail/templates/passkeyCreate.tmpl
+++ b/backend/mail/templates/passkeyCreate.tmpl
@@ -1,6 +1,6 @@
 {{define "passkeyCreateTextMail"}}
-{{t "passkey_create_text" .}}
+<p>{{t "passkey_create_text" .}}</p>
 
-{{t "security_disclaimer_text" .}}
+<p>{{t "security_disclaimer_text" .}}</p>
 
 {{end}}
