--- a/backend/mail/templates/passwordUpdate.tmpl
+++ b/backend/mail/templates/passwordUpdate.tmpl
@@ -1,6 +1,6 @@
 {{define "passwordUpdateTextMail"}}
-{{t "password_update_text" .}}
+<p>{{t "password_update_text" .}}</p>
 
-{{t "security_disclaimer_text" .}}
+<p>{{t "security_disclaimer_text" .}}</p>
 
 {{end}}
