--- a/backend/mail/templates/primaryEmailUpdate.tmpl
+++ b/backend/mail/templates/primaryEmailUpdate.tmpl
@@ -1,6 +1,6 @@
 {{define "primaryEmailUpdateTextMail"}}
-{{t "primary_email_update_text" .}}
+<p>{{t "primary_email_update_text" .}}</p>
 
-{{t "security_disclaimer_text" .}}
+<p>{{t "security_disclaimer_text" .}}</p>
 
 {{end}}
